RESOLVED FIXED191800
REGRESSION(r238335): Assertion hit in NetworkProcessProxy destructor
https://bugs.webkit.org/show_bug.cgi?id=191800
Summary REGRESSION(r238335): Assertion hit in NetworkProcessProxy destructor
Chris Dumez
Reported 2018-11-16 21:06:57 PST
Assertion hit in NetworkProcessProxy destructor: ASSERTION FAILED: Completion handler should always be called !m_function /Volumes/Data/WebKit/OpenSource/WebKitBuild/Debug/usr/local/include/wtf/CompletionHandler.h(51) : WTF::CompletionHandler<void (const IPC::Attachment &)>::~CompletionHandler() 1 0x10f7c00d9 WTFCrash _RegisterApplication(), FAILED TO establish the default connection to the WindowServer, _CGSDefaultConnection() is NULL. 2 0x11930a453 WTF::CompletionHandler<void (IPC::Attachment const&)>::~CompletionHandler() 3 0x11929e005 WTF::CompletionHandler<void (IPC::Attachment const&)>::~CompletionHandler() 4 0x1192b9e83 std::__1::pair<WTF::WeakPtr<WebKit::WebProcessProxy>, WTF::CompletionHandler<void (IPC::Attachment const&)> >::~pair() 5 0x1192999d5 std::__1::pair<WTF::WeakPtr<WebKit::WebProcessProxy>, WTF::CompletionHandler<void (IPC::Attachment const&)> >::~pair() 6 0x11930822f WTF::VectorDestructor<true, std::__1::pair<WTF::WeakPtr<WebKit::WebProcessProxy>, WTF::CompletionHandler<void (IPC::Attachment const&)> > >::destruct(std::__1::pair<WTF::WeakPtr<WebKit::WebProcessProxy>, WTF::CompletionHandler<void (IPC::Attachment const&)> >*, std::__1::pair<WTF::WeakPtr<WebKit::WebProcessProxy>, WTF::CompletionHandler<void (IPC::Attachment const&)> >*) 7 0x1193081cd WTF::VectorTypeOperations<std::__1::pair<WTF::WeakPtr<WebKit::WebProcessProxy>, WTF::CompletionHandler<void (IPC::Attachment const&)> > >::destruct(std::__1::pair<WTF::WeakPtr<WebKit::WebProcessProxy>, WTF::CompletionHandler<void (IPC::Attachment const&)> >*, std::__1::pair<WTF::WeakPtr<WebKit::WebProcessProxy>, WTF::CompletionHandler<void (IPC::Attachment const&)> >*) 8 0x1193080e7 WTF::Deque<std::__1::pair<WTF::WeakPtr<WebKit::WebProcessProxy>, WTF::CompletionHandler<void (IPC::Attachment const&)> >, 0ul>::destroyAll() 9 0x119307ffb WTF::Deque<std::__1::pair<WTF::WeakPtr<WebKit::WebProcessProxy>, WTF::CompletionHandler<void (IPC::Attachment const&)> >, 0ul>::~Deque() 10 0x1192994a5 WTF::Deque<std::__1::pair<WTF::WeakPtr<WebKit::WebProcessProxy>, WTF::CompletionHandler<void (IPC::Attachment const&)> >, 0ul>::~Deque() 11 0x119299325 WebKit::NetworkProcessProxy::~NetworkProcessProxy() 12 0x1192994c5 WebKit::NetworkProcessProxy::~NetworkProcessProxy() 13 0x119299529 WebKit::NetworkProcessProxy::~NetworkProcessProxy() 14 0x11909068c WebKit::WebProcessPool::~WebProcessPool() 15 0x119091cf5 WebKit::WebProcessPool::~WebProcessPool() 16 0x118d2512e -[WKProcessPool dealloc] 17 0x118b96e5d API::Object::deref() 18 0x118d2f9d1 void WTF::derefIfNotNull<WebKit::WebProcessPool>(WebKit::WebProcessPool*) 19 0x118d2f999 WTF::RefPtr<WebKit::WebProcessPool, WTF::DumbPtrTraits<WebKit::WebProcessPool> >::~RefPtr() 20 0x118d24be5 WTF::RefPtr<WebKit::WebProcessPool, WTF::DumbPtrTraits<WebKit::WebProcessPool> >::~RefPtr() 21 0x1190cd163 WebKit::WebProcessProxy::WeakOrStrongPtr<WebKit::WebProcessPool>::~WeakOrStrongPtr() 22 0x1190b1085 WebKit::WebProcessProxy::WeakOrStrongPtr<WebKit::WebProcessPool>::~WeakOrStrongPtr() 23 0x1190b0b90 WebKit::WebProcessProxy::~WebProcessProxy() 24 0x1190b1105 WebKit::WebProcessProxy::~WebProcessProxy() 25 0x1190b1189 WebKit::WebProcessProxy::~WebProcessProxy() 26 0x118d32791 WTF::ThreadSafeRefCounted<WebKit::WebProcessProxy, (WTF::DestructionThread)0>::deref() const 27 0x118d70c05 WTF::Ref<WebKit::WebProcessProxy, WTF::DumbPtrTraits<WebKit::WebProcessProxy> >::~Ref() 28 0x118d4f435 WTF::Ref<WebKit::WebProcessProxy, WTF::DumbPtrTraits<WebKit::WebProcessProxy> >::~Ref() 29 0x118e75465 WebKit::SuspendedPageProxy::~SuspendedPageProxy()::$_0::~$_0() 30 0x118e6e145 WebKit::SuspendedPageProxy::~SuspendedPageProxy()::$_0::~$_0() 31 0x118e7d7c1 WTF::Function<void ()>::CallableWrapper<WebKit::SuspendedPageProxy::~SuspendedPageProxy()::$_0>::~CallableWrapper()
Attachments
Patch (1.91 KB, patch)
2018-11-16 21:21 PST, Chris Dumez
rniwa: review+
Chris Dumez
Comment 1 2018-11-16 21:21:46 PST
Ryosuke Niwa
Comment 2 2018-11-16 21:35:59 PST
Comment on attachment 355178 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=355178&action=review > Source/WebKit/ChangeLog:9 > + Make sure the NetworkProcessProxy destructor calls its remaining m_pendingConnectionReplies > + completion handlers to avoid hitting an assertion in the CompletionHandler destructor. I guess this is a regression from https://trac.webkit.org/changeset/238335 ?
Ryosuke Niwa
Comment 3 2018-11-16 21:36:11 PST
Comment on attachment 355178 [details] Patch Let's wait for EWS.
Chris Dumez
Comment 4 2018-11-16 22:26:21 PST
(In reply to Ryosuke Niwa from comment #2) > Comment on attachment 355178 [details] > Patch > > View in context: > https://bugs.webkit.org/attachment.cgi?id=355178&action=review > > > Source/WebKit/ChangeLog:9 > > + Make sure the NetworkProcessProxy destructor calls its remaining m_pendingConnectionReplies > > + completion handlers to avoid hitting an assertion in the CompletionHandler destructor. > > I guess this is a regression from https://trac.webkit.org/changeset/238335 ? Yes, that is my understanding.
Chris Dumez
Comment 5 2018-11-16 22:47:01 PST
Radar WebKit Bug Importer
Comment 6 2018-11-16 22:47:27 PST
Ryosuke Niwa
Comment 7 2018-11-16 22:57:03 PST
Comment on attachment 355178 [details] Patch Clearing cq? since this patch has already been landed.
Note You need to log in before you can comment on or make changes to this bug.